--- a/.env.sample
+++ b/.env.sample
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=hveUrIx39I8pabOFAlBKJTSu5KY1t0he
 
 DB_HOST=localhost
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=phone_ec
+DB_USERNAME=root
+DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
