--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+
+        "cboden/ratchet":"~0.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -19,7 +21,9 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+
+            "vendor/bin/chat.php"
         ],
         "psr-4": {
             "App\\": "app/"
