--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,7 @@
     },
     "autoload": {
         "classmap": [
-            "database",
-
-            "vendor/bin/chat.php"
+            "database"
         ],
         "psr-4": {
             "App\\": "app/"
